fixed menu link alignment

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1030,12 +1030,12 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 2.5rem;
+    gap: 3.9rem;
     margin-inline-start: auto;
 
     .menu-sub-wrapper {
       display: flex;
-      gap: 2.5rem;
+      gap: 3.9rem;
     }
   }
 
@@ -1140,6 +1140,15 @@ footer {
     .input-button-wrapper,
     .text-input-wrapper {
       padding-inline: 2rem;
+    }
+  }
+  footer {
+    .menu-wrapper {
+      gap: 2.65rem;
+  
+      .menu-sub-wrapper {
+        gap: 2.65rem;
+      }
     }
   }
 }
